fix herocover responsiveness. ref: https://stackoverflow.com/questions/70077107/make-different-size-images-to-be-responsive-using-next-image

--- a/site/components/ui/HeroCover/HeroCover.module.css
+++ b/site/components/ui/HeroCover/HeroCover.module.css
@@ -1,6 +1,5 @@
 .root {
-  @apply relative w-[full] h-[30vh] md:h-[50vh] lg:h-[52vh] xl:h-[95vh] -mb-[1.75em] lg:-mb-[-6.75em] xl:-mb-[3.75em];
-  /* @apply flex flex-col mx-auto w-full h-[10vh]; */
+  @apply mx-6;
 }
 
 .title {
